# backend/esl/serializers/esl_serializers.py
@@ -1,12 +1,12 @@
-# from rest_framework import serializers
+from rest_framework import serializers
 
-# from backend.esl.models.company import *
+from backend.esl.models.esl import *
 
-# from esl.serializers.rack_serializers import RackSerializer
+from esl.serializers.rack_serializers import RackSerializer
 
-# class ESLSerializer(serializers.ModelSerializer):
-#     rack=RackSerializer()
+class ESLSerializer(serializers.ModelSerializer):
+    rack=RackSerializer()
 
-#     class Meta:
-#         model=ESL
-#         fields="__all__"
+    class Meta:
+        model=ESL
+        fields="__all__"
