# docs/api_docs_main.yaml
@@ -9,16 +9,20 @@ tags:
     description: Методы, связанные с аутентификацией
   - name: profile
     description: Методы, связанные с профилем
-  - name: organizations
-    description: Методы, связанные с организациями
-  - name: filials
+  - name: company
+    description: Методы, связанные с компаниями
+  - name: filial
     description: Методы, связанные с филиалами
-  - name: racks
+  - name: rack
     description: Методы, связанные со стеллажами
-  - name: products
+  - name: product
     description: Методы, связанные с продуктами
   - name: esl
     description: Методы, связанные с электронными ценниками
+  - name: integration
+    description: Методы, связанные с интеграциями внешних систем
+  - name: force
+    description: Методы принудительного обновления информации
 
 paths:
   /api/auth/login/:
@@ -86,7 +90,7 @@ paths:
   /api/filial/:
     get:
       tags:
-        - filials
+        - filial
       security:
         - bearer: []
       summary: Получение списка филиалов
@@ -102,32 +106,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/FilialsList'
 
-    post:
-      tags:
-        - filials
-      security:
-        - bearer: []
-      summary: Создание нового филиала
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/FilialToCreate'
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Ошибка в запросе
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbiden
-
   /api/filial/{id}/:
     get:
       tags:
-        - filials
+        - filial
       security:
         - bearer: []
       summary: Получение информации о филиале по ID
@@ -149,68 +131,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FilialInfo'
-    put:
-      tags:
-        - filials
-      security:
-        - bearer: []
-      summary: Изменение информации о филиале по ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: number
-            description: ID филиала
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/FilialInfo'
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Ошибка в запросе
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbiden
 
-    delete:
-      tags:
-        - filials
-      security:
-        - bearer: []
-      summary: Удаление филиала по ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: number
-            description: ID филиала
-      responses:
-        '200':
-          description: OK
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbiden
-
-  /api/product/show/{barcode}/:
+  /api/product/show/:
     get:
       tags:
-        - products
+        - product
       summary: Получение полной информации о продукте
       parameters:
-        - name: barcode
-          in: path
+        - name: company
+          in: query
           required: true
           schema:
             type: string
-            description: Штрихкод товара
+            description: ID компании
+        - name: product
+          in: query
+          required: true
+          schema:
+            type: string
+            description: ID товара
       responses:
         '404':
           description: Not Found
@@ -224,10 +163,10 @@ paths:
   /api/product/:
     get:
       tags:
-        - products
+        - product
       security:
         - bearer: []
-      summary: Получение списка товаров
+      summary: Получение списка товаров для текущей компании
       responses:
         '401':
           description: Unauthorized
@@ -246,6 +185,24 @@ paths:
                       type: string
                     barcode:
                       type: string
+
+    post:
+      tags:
+        - product
+      summary: Обновление информации о товарах
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/ProductUpdates"
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Ошибка в запросе      
 
   /api/esl/:
     post:
@@ -369,7 +326,7 @@ paths:
   /api/rack/{id}/:
     get:
       tags:
-        - racks
+        - rack
       security:
         - bearer: []
       summary: Получение информации о стеллаже по ID
@@ -393,7 +350,7 @@ paths:
                 $ref: '#/components/schemas/Rack'
     put:
       tags:
-        - racks
+        - rack
       security:
         - bearer: []
       summary: Изменение информации о стеллаже по ID
@@ -422,7 +379,7 @@ paths:
 
     delete:
       tags:
-        - racks
+        - rack
       security:
         - bearer: []
       summary: Удаление стеллажа по ID
@@ -444,7 +401,7 @@ paths:
   /api/rack/:
     post:
       tags:
-        - racks
+        - rack
       security:
         - bearer: []
       summary: Создание нового стеллажа
@@ -464,10 +421,10 @@ paths:
         '403':
           description: Forbiden
 
-  /api/organization/:
+  /api/company/:
     get:
       tags:
-        - organizations
+        - company
       security:
         - bearer: []
       summary: Получение списка организаций в доступе у текущего пользователя
@@ -483,34 +440,12 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Organization'
+                  $ref: '#/components/schemas/Company'
     
-    post:
-      tags:
-        - organizations
-      security:
-        - bearer: []
-      summary: Создание организации
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/OrganizationToCreate'
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Ошибка в запросе
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbiden
-    
-  /api/organization/{id}/:
+  /api/company/{id}/:
     get:
       tags:
-        - organizations
+        - company
       security:
         - bearer: []
       summary: Получение информации об организации по ID
@@ -531,52 +466,26 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Organization'
-    put:
+                $ref: '#/components/schemas/Company'
+  
+  /api/integration/:
+    post:
       tags:
-        - organizations
+        - integration
       security:
         - bearer: []
-      summary: Изменение информации об организации по ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: number
-            description: ID организации
+      summary: Создание интеграции для компании
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Organization'
+              $ref: '#/components/schemas/IntegrationToCreate'
       responses:
         '200':
           description: OK
         '400':
           description: Ошибка в запросе
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbiden
-      
-    delete:
-      tags:
-        - organizations
-      security:
-        - bearer: []
-      summary: Удаление организации по ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: number
-            description: ID организации
-      responses:
-        '200':
-          description: OK
         '401':
           description: Unauthorized
         '403':
@@ -664,7 +573,7 @@ components:
     RackToCreate:
       type: object
       properties:
-        organization:
+        company:
           type: number
         number:
           type: number
@@ -678,18 +587,10 @@ components:
           type: string
         address:
           type: string
-        racks:
+        rack:
           type: array
           items:
             $ref: '#/components/schemas/Rack'
-
-    FilialToCreate:
-      type: object
-      properties:
-        name: 
-          type: string
-        address:
-          type: string
 
     ESLError:
       type: object
@@ -729,15 +630,37 @@ components:
           type: string
         photo:
           type: string
+
+    ProductUpdates:
+      type: object
+      properties:
+        product_id: 
+          type: string
+        short_name:
+          type: string
+        old_price:
+          type: number
+        current_price:
+          type: number
+        have_promotion:
+          type: boolean
     
-    Organization:
+    Company:
       type: object
       properties:
         name: 
           type: string
 
-    OrganizationToCreate:
+    IntegrationToCreate:
       type: object
       properties:
-        name:
+        company:
+          type: number
+        login:
           type: string
+        password:
+          type: string
+        url:
+          type: string
+        intervals:
+          type: number
